fix(docs): horizontal scroll in mobile main page (#800)

--- a/apps/docs/assets/styles/main.css
+++ b/apps/docs/assets/styles/main.css
@@ -202,6 +202,7 @@ article > h1 {
 
 .article {
   padding-inline: 16px;
+  word-break: break-word;
 }
 
 @media (min-width: 960px) {
